# BYOL

./: .gitattributes  .gitignore  LICENSE  README.md  byol_nya_1b_cpt_base_mri.txt  byol_nya_1b_cpt_hellaswag_ny.txt
eval/: .gitignore  README.md  extract_benchmarks.py  lm-evaluation-harness  pyproject.toml  requirements.txt
eval/byol_eval/: __init__.py  __main__.py  cli.py  config.py  constants.py  judge.py  runner.py  secrets.py
eval/configs/: benchmark_base_mri.yaml  benchmark_base_nya.yaml  benchmark_instruct_mri.yaml  benchmark_instruct_nya.yaml  benchmark_safety.yaml  judge_datasets.yaml  judge_models.yaml
eval/data/: HiTZ-truthfulqa-multi_train_english2Maori_microsoft_translated.jsonl  HiTZ-truthfulqa-multi_validation_english2chichewa_microsoft_translated.jsonl  ai2_arc_easy_test_english2Maori_microsoft_translated.jsonl  ai2_arc_easy_validation_english2chichewa_microsoft_translated.jsonl  ai2_arc_hard_test_english2chichewa_microsoft_translated.jsonl  m-ArenaHard_test_english2Maori_microsoft_translated.jsonl  mgsm_test_english2Maori_microsoft_translated.jsonl  mgsm_train_english2chichewa_microsoft_translated.jsonl  mmlu_lite_dev_english2chichewa_professional_updated.jsonl  piqa_test_english2Maori_microsoft_translated.jsonl  piqa_validation_english2chichewa_microsoft_translated.jsonl  x-copa_test_english2chichewa_microsoft_translated.jsonl  xlsum_validation_english2Maori_microsoft_translated.jsonl  xquad_validation_english2Maori_microsoft_translated.jsonl  xquad_validation_english2chichewa_microsoft_translated.jsonl  xstory_cloze_eval_english2chichewa_microsoft_translated.jsonl  xstory_cloze_train_english2chichewa_microsoft_translated.jsonl  xwinograd_aligned_chichewa_1000.jsonl  xwinograd_clean_maori_1000.jsonl  xwinograd_test_english2chichewa_microsoft_translated.jsonl
eval/data/chichewa/: HiTZ-truthfulqa-multi_train_english2chichewa_microsoft_translated.jsonl  ai2_arc_easy_test_english2chichewa_microsoft_translated.jsonl  ai2_arc_hard_validation_english2chichewa_microsoft_translated.jsonl  copa_test_english2chichewa_microsoft_translated.jsonl  copa_validation_english2chichewa_microsoft_translated.jsonl  mgsm_test_english2chichewa_microsoft_translated.jsonl  mmlu_lite_test_english2chichewa_professional_updated.jsonl  x-copa_validation_english2chichewa_microsoft_translated.jsonl  xnli_test_english2chichewa_microsoft_translated.jsonl  xnli_validation_english2chichewa_microsoft_translated.jsonl
eval/data/maori/: HiTZ-truthfulqa-multi_validation_english2Maori_microsoft_translated.jsonl  ai2_arc_easy_validation_english2Maori_microsoft_translated.jsonl  ai2_arc_hard_test_english2Maori_microsoft_translated.jsonl  ai2_arc_hard_validation_english2Maori_microsoft_translated.jsonl  (+13 more)
eval/patches/: apply_lmeval_patches.py
train/: README.md  pyproject.toml  requirements.txt  simple_merge.py
train/byol_train/: __init__.py  cli.py  config.py  constants.py  merge.py  runner.py  secrets.py
train/configs/: cpt.yaml  dpo.yaml  merge.yaml  sft.yaml
train/data/: dataset_info.json
(+162 files in other folders)
